[package]
name = "window-wrapper"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egl = "0.2.7"

[build-dependencies]
bindgen = "0.56.0"

[profile.release]
lto = true
opt-level = "z"
